<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_drawer_background"
    android:id="@+id/nav_feedback">

    <TextView
        android:id="@+id/etTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/how_would_you_rate_your_experience"
        android:textColor="@color/on_nav_drawer_background_subheading"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/feedback_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/edit_text_fields"
            android:textColor="@color/midnight_moss"
            android:ems="20"
            android:padding="15dp"
            android:hint="@string/name"
            android:textColorHint="@color/on_edit_text_fields_hint" />

        <EditText
            android:id="@+id/etPhone"
            android:hint="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/edit_text_fields"
            android:textColor="@color/midnight_moss"
            android:inputType="number"
            android:maxLength="10"
            android:ems="20"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/on_edit_text_fields_hint" />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/emailv2"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/edit_text_fields"
            android:textColor="@color/midnight_moss"
            android:ems="20"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/on_edit_text_fields_hint" />

        <EditText
            android:id="@+id/etComment"
            android:hint="@string/your_comment"
            android:background="@drawable/semirounded_corners"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_fields"
            android:textColor="@color/midnight_moss"
            android:ems="20"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/on_edit_text_fields_hint" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:stepSize="0.5"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/on_nav_drawer_background"
            android:outlineSpotShadowColor="@color/midnight_moss"

            android:layout_marginTop="10dp"/>

        <FrameLayout
            android:id="@+id/btnSubmitContainer"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnSubmit"
                android:text="@string/submit_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/btnProgress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/red"
                android:visibility="gone" />


        </FrameLayout>

        <TextView
            android:id="@+id/countdownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_gravity="center_horizontal"
            android:text="" />

    </LinearLayout>

</RelativeLayout>
