<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".view.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/login_profile"
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:layout_marginTop="-150dp"
            android:src="@drawable/welcome" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/faded_white"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:textColor="@color/deep_moss"
            android:textColorHint="@color/fade"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/faded_white"
            android:drawableEnd="@drawable/visibility_on"
            android:drawableTint="@color/deep_moss"
            android:ems="15"
            android:layout_marginTop="10dp"
            android:textColor="@color/deep_moss"
            android:textColorHint="@color/fade"
            android:hint="@string/password"
            android:padding="15dp"
            android:textSize="20sp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:text=""
            android:drawableStart="@drawable/error_red"
            android:textColor="@color/error_message"
            android:padding="5dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/login_rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/remember_me"
            android:textColor="@color/faded_black"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:ems="9"
            android:text="@string/login" />

        <Button
            android:id="@+id/login_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/faded_black"
            android:text="@string/forgot_password"
            android:background="@color/transparent" />

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_createAccountButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_corners" />

    <!-- "Create an Account" Button at the Bottom -->
    <Button
        android:id="@+id/login_createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/signup_button_background"
        android:backgroundTint="#0B6634"
        android:ems="15"
        android:text="@string/create_an_account" />

</RelativeLayout>