...
      Dhairya Pal – N01576099
      Sanskriti Mansotra – N01523183
      Dharmik Shah – N01581796 -->
<resources>
    <string name="app_name">Phytoplankton Air Systems</string>
    <string name="app_tagline">Because trees get all the credit.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
...
    <string name="phone_number_is_required">Phone number is required</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="password_must_include_upper_lower_case_and_number_or_special_character"><![CDATA[Password must include upper & lower case, and number or special character]]></string>
    <string name="email_address_is_already_in_use">email address is already in use</string>
    <string name="this_email_is_already_registered_please_use_a_different_email_or_login">This email is already registered. Please use a different email or login.</string>
    <string name="verification_link_check_text">A verification link has been sent. Please check your inbox.</string>
    <string name="ok">OK</string>
    <string name="failed_to_reload_user">Failed to reload user</string>
    <string name="your_comment">Your Comment</string>
    <string name="emailv2">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="submit_feedback">Submit Feedback</string>
...
